--- a/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
+++ b/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
@@ -11,9 +11,9 @@
 
         <TextBlock HorizontalAlignment="Left" Margin="66,55,0,0" Text="BUDWEG" TextWrapping="Wrap" VerticalAlignment="Top" Height="51" Width="157" FontSize="36" FontWeight="Bold" Background="Green" Foreground="White"/>
         <Label Content="Antal kalibrer renoveret: " HorizontalAlignment="Left" Margin="421,175,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBox x:Name="txtAmount" HorizontalAlignment="Left" Margin="572,179,0,0" Text="{Binding CaliperViewModel.Amount, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <TextBox x:Name="txtAmount" HorizontalAlignment="Left" Margin="572,179,0,0" Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
         <Label Content="CO2 sparet: " HorizontalAlignment="Left" Margin="421,234,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBox x:Name="txtSavedCo2Amount" HorizontalAlignment="Left" Margin="572,238,0,0" Text="{Binding CaliperViewModel.SavedCo2Amount, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txtSavedCo2Amount_TextChanged"/>
+        <TextBox x:Name="txtSavedCo2Amount" HorizontalAlignment="Left" Margin="572,238,0,0" Text="{Binding AmountCo2Saved, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txtSavedCo2Amount_TextChanged"/>
         <Button x:Name="CalcOk" Content="Udregn" HorizontalAlignment="Left" Margin="632,374,0,0" VerticalAlignment="Top" Click="btnCalc" Height="25" Width="96"/>
     </Grid>
 </Window>
