--- a/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
+++ b/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
@@ -14,6 +14,7 @@
         <TextBox x:Name="txtAmount" HorizontalAlignment="Left" Margin="572,179,0,0" Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
         <Label Content="CO2 sparet: " HorizontalAlignment="Left" Margin="421,234,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBox x:Name="txtSavedCo2Amount" HorizontalAlignment="Left" Margin="572,238,0,0" Text="{Binding AmountCo2Saved, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txtSavedCo2Amount_TextChanged"/>
-        <Button x:Name="CalcOk" Content="Udregn" HorizontalAlignment="Left" Margin="632,374,0,0" VerticalAlignment="Top" Click="btnCalc" Height="25" Width="96"/>
+        <Button x:Name="CalcOk" Content="Udregn" HorizontalAlignment="Left" Margin="632,346,0,0" VerticalAlignment="Top" Click="btnCalc" Height="26" Width="96"/>
+        <Button Content="Se Historik" HorizontalAlignment="Left" Margin="476,347,0,0" VerticalAlignment="Top" Height="25" Width="96" Click="Button_Click"/>
     </Grid>
 </Window>
