--- a/Budweg2.0/BudwegCo2/BudwegCo2/View/MainWindow.xaml
+++ b/Budweg2.0/BudwegCo2/BudwegCo2/View/MainWindow.xaml
@@ -9,7 +9,9 @@
         " >
 
     <Grid>
-        <Button Content="Åben Beregner" HorizontalAlignment="Center" Margin="0,355,0,0" VerticalAlignment="Top" Height="37" Width="150" IsEnabled="True" Click="Button_Click"/>
+        <Label Content="" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="605" Background="WhiteSmoke"/>
+
+        <Button Content="Åben Beregner" HorizontalAlignment="Left" Margin="198,353,0,0" VerticalAlignment="Top" Height="37" Width="150" IsEnabled="True" Click="Button_Click"/>
         <Label Content="Brugernavn:" HorizontalAlignment="Left" Margin="154,159,0,0" VerticalAlignment="Top"/>
         <Label Content="Kode:" HorizontalAlignment="Left" Margin="154,199,0,0" VerticalAlignment="Top"/>
         <PasswordBox HorizontalAlignment="Left" Margin="228,199,0,0" VerticalAlignment="Top" Width="120"/>
