--- a/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
+++ b/Budweg2.0/BudwegCo2/BudwegCo2/View/CaliperPage.xaml
@@ -9,10 +9,10 @@
     <Grid>
         <TextBlock HorizontalAlignment="Left" Text="" TextWrapping="Wrap" VerticalAlignment="Center" Height="434" Width="383" Background="Green"/>
 
-        <TextBlock HorizontalAlignment="Left" Margin="66,55,0,0" Text="BUDWEG" TextWrapping="Wrap" VerticalAlignment="Top" Height="51" Width="157" FontSize="36" FontWeight="Bold" Background="Green" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="100,59,0,0" Text="BUDWEG" TextWrapping="Wrap" VerticalAlignment="Top" Height="51" Width="157" FontSize="36" FontWeight="Bold" Background="Green" Foreground="White"/>
         <Label Content="Antal kalibrer renoveret: " HorizontalAlignment="Left" Margin="421,175,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBox x:Name="txtAmount" HorizontalAlignment="Left" Margin="572,179,0,0" Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <Label Content="CO2 sparet: " HorizontalAlignment="Left" Margin="421,234,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="CO2 sparet i kg: " HorizontalAlignment="Left" Margin="421,234,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBox x:Name="txtSavedCo2Amount" HorizontalAlignment="Left" Margin="572,238,0,0" Text="{Binding AmountCo2Saved, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txtSavedCo2Amount_TextChanged"/>
         <Button x:Name="CalcOk" Content="Udregn" HorizontalAlignment="Left" Margin="632,346,0,0" VerticalAlignment="Top" Click="btnCalc" Height="26" Width="96"/>
         <Button Content="Se Historik" HorizontalAlignment="Left" Margin="476,347,0,0" VerticalAlignment="Top" Height="25" Width="96" Click="Button_Click"/>
